# game-of-life

./: Cargo.toml  README.md
shaders/: gol.frag  gol.vert  pyramid.frag  pyramid.vert
src/: lib.rs  main.rs  test.rs
src/renderer/: mod.rs
